--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+*{
+	margin: 0 auto;
+}
 table{
 border-collapse: collapse;
 width: 100%;
@@ -43,18 +46,25 @@ img{
 }
 p{
     color: #DDDDDD;
-    padding-left: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px 0;
     
 }
-
+form {
+	text-align: center;
+}
 input {
     background-color: #AA2712;
     color: white;
     padding: 16px;
     font-size: 16px;
-    margin-left: 30px; 
+    margin: 0 5px; 
     border: none;
     cursor: pointer;
+ 	text-align: center;
+
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
