--- a/style/style.css
+++ b/style/style.css
@@ -71,7 +71,7 @@ input[type=submit] {
 
     padding: 16px;
     font-size: 16px;
-    margin: 0 5px; 
+    margin: 5px 5px; 
     border: none;
     cursor: pointer;
  	
