--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@ border: 1px solid black;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(odd){background-color: #DAA520;}
 
 th{
 background-color: rgb(41, 145, 149);
